Fix Java version parsing, add coverage